// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> Default story renders snapshot 1`] = `
<div
  class="dropdown w-60"
  data-testid="dropdown"
>
  <label
    id="headlessui-listbox-label-1"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-3"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="headlessui-listbox-label-1 headlessui-listbox-button-2"
    class="dropdownButton"
    id="headlessui-listbox-button-2"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="svgIcon"
      fill="currentColor"
      height="1.25rem"
      style="--svg-icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-1"
    aria-orientation="vertical"
    class="dropdownOptions"
    id="headlessui-listbox-options-3"
    role="listbox"
    tabindex="0"
  >
    <li
      class="dropdownOption dropdownOptionUnselected"
      id="headlessui-listbox-option-4"
      role="option"
      tabindex="-1"
    >
      <span
        class="dropdownOptionContent"
      >
        Dogs
      </span>
    </li>
    <li
      class="dropdownOption dropdownOptionUnselected"
      id="headlessui-listbox-option-5"
      role="option"
      tabindex="-1"
    >
      <span
        class="dropdownOptionContent"
      >
        Cats
      </span>
    </li>
    <li
      class="dropdownOption dropdownOptionUnselected"
      id="headlessui-listbox-option-6"
      role="option"
      tabindex="-1"
    >
      <span
        class="dropdownOptionContent"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> UsingOptionsProp story renders snapshot 1`] = `
<div
  class="dropdown w-60"
  data-testid="dropdown"
>
  <label
    id="headlessui-listbox-label-7"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-9"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="headlessui-listbox-label-7 headlessui-listbox-button-8"
    class="dropdownButton"
    id="headlessui-listbox-button-8"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="svgIcon"
      fill="currentColor"
      height="1.25rem"
      style="--svg-icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-7"
    aria-orientation="vertical"
    class="dropdownOptions"
    id="headlessui-listbox-options-9"
    role="listbox"
    tabindex="0"
  >
    <li
      class="dropdownOption dropdownOptionUnselected"
      id="headlessui-listbox-option-10"
      role="option"
      tabindex="-1"
    >
      <span
        class="dropdownOptionContent"
      >
        Dogs
      </span>
    </li>
    <li
      class="dropdownOption dropdownOptionUnselected"
      id="headlessui-listbox-option-11"
      role="option"
      tabindex="-1"
    >
      <span
        class="dropdownOptionContent"
      >
        Cats
      </span>
    </li>
    <li
      class="dropdownOption dropdownOptionUnselected"
      id="headlessui-listbox-option-12"
      role="option"
      tabindex="-1"
    >
      <span
        class="dropdownOptionContent"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;
